@@ -1,3 +1,12 @@
+2012-02-08  Gustavo Noronha Silva  <gns@gnome.org>
+
+        [GTK] Fails to build docs with non-standard build directories
+        https://bugs.webkit.org/show_bug.cgi?id=78118
+
+        * gtk/common.py:
+        (get_build_path): add comment to document changes done in r107098,
+        as requested by the reviewer and forgotten by me.
+
 2012-02-08  Adam Barth  <abarth@webkit.org>
 
         Stop importing with_statement from the mysterious future
